--- a/boolando-images/index.html
+++ b/boolando-images/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>boolando</title>
 </head>
+
 <body>
     <header>
         <div>
@@ -13,31 +15,86 @@
             <a href="">Uomo</a>
             <a href="">Bambino</a>
         </div>
-        
+
     </header>
     <main>
         <section class="flex-centered">
-        <div class="column column-small">
-            <img src="img/1.webp">
-        </div>
-        <div class="column column-small">          
-            <img src="img/2.webp"> 
-        </div>
-        <div class="column column-small">
-            <img src="img/3.webp"  >
-        </div>
+            <div class="column column-small">
+                <img src="img/1.webp">
+                
+                <h4>
+                    Levi's
+                </h4>
+                <p>
+                    RELAXED FIT TEE UNISEX
+                </p>
+                <p class="p1">
+                    14,99€ <s class="black">29,99€</s>
+                </p>
+            </div>
+            <div class="column column-small">
+                <img src="img/2.webp">
+                <h4>
+                    Guess
+                </h4>
+                <p>
+                    ROSES TEE
+                </p>
+                <p class="p1">
+                    20,99€ <s class="black">29,99€</s>
+                </p>
+            </div>
+            <div class="column column-small">
+                <img src="img/3.webp">
+                <h4>
+                    Come Zucchero Filato
+                </h4>
+                <p>
+                    VOGLIA DI COLORI PASTELLO
+                </p>
+                <p class="p1">
+                    129,99€ <s class="black">184,99€</s>
+                </p>
+            </div>
         </section>
         <section class="flex-centered">
-        <div class="column column-small">
-            <img src="img/4.webp">
-        </div>
-        <div class="column column-small">
-            <img src="img/5.webp"> 
-        </div>
-        <div class="column column-small">
-            <img src="img/6.webp" >
-        </div>
-            </section>
+            <div class="column column-small">
+                <img src="img/4.webp">
+                <h4>
+                    Levi's
+                </h4>
+                <p>
+                    TEE UNISEX
+                </p>
+                <p class="p1">
+                    14,99€ <s class="black">29,99€</s>
+                </p>
+            </div>
+            <div class="column column-small">
+                <img src="img/5.webp">
+                <h4>
+                    Maya Deluxe
+                </h4>
+                <p>
+                    STIRPE BODICE
+                </p>
+                <p class="p1">
+                    99,99€
+                </p>
+            </div>
+            <div class="column column-small">
+                <img src="img/6.webp">
+                <h4>
+                    Esprit
+                </h4>
+                <p>
+                    MAGLIONE BLACK
+                </p>
+                <p class="p1">
+                    24,99€
+                </p>
+            </div>
+        </section>
     </main>
     <footer>
 
@@ -45,4 +102,5 @@
 
 
 </body>
+
 </html>
