--- a/boolando-images/index.html
+++ b/boolando-images/index.html
@@ -20,8 +20,10 @@
     <main>
         <section class="flex-centered">
             <div class="column column-small">
-                <img src="img/1.webp">
-                
+                <div class="cambioimmagine">
+                <img class="immagine1" src="img/1.webp">
+                <img class="immagine2" src="img/1b.webp">
+                </div>
                 <h4>
                     Levi's
                 </h4>
@@ -33,7 +35,10 @@
                 </p>
             </div>
             <div class="column column-small">
-                <img src="img/2.webp">
+                <div class="cambioimmagine">
+                <img class="immagine1" src="img/2.webp">
+                <img class="immagine2" src="img/2b.webp">
+                </div>
                 <h4>
                     Guess
                 </h4>
@@ -45,7 +50,10 @@
                 </p>
             </div>
             <div class="column column-small">
-                <img src="img/3.webp">
+                <div class="cambioimmagine">
+                <img class="immagine1" src="img/3.webp">
+                <img class="immagine2" src="img/3b.webp">
+                </div>
                 <h4>
                     Come Zucchero Filato
                 </h4>
@@ -59,7 +67,10 @@
         </section>
         <section class="flex-centered">
             <div class="column column-small">
-                <img src="img/4.webp">
+                <div class="cambioimmagine">
+                <img class="immagine1" src="img/4.webp">
+                <img class="immagine2" src="img/4b.webp">
+                </div>
                 <h4>
                     Levi's
                 </h4>
@@ -71,7 +82,10 @@
                 </p>
             </div>
             <div class="column column-small">
-                <img src="img/5.webp">
+                <div class="cambioimmagine">
+                <img class="immagine1" src="img/5.webp">
+                <img class="immagine2" src="img/5b.webp">
+                </div>
                 <h4>
                     Maya Deluxe
                 </h4>
@@ -83,7 +97,10 @@
                 </p>
             </div>
             <div class="column column-small">
-                <img src="img/6.webp">
+                <div class="cambioimmagine">
+                <img class="immagine1" src="img/6.webp">
+                <img class="immagine2" src="img/6b.webp">
+                </div>
                 <h4>
                     Esprit
                 </h4>
@@ -97,7 +114,22 @@
         </section>
     </main>
     <footer>
-
+        <div class="flex">
+        <div >
+            <h3>
+                Boolando.srl
+            </h3>
+            <a href="">informazioni legali</a>
+            <a href="">Informativa sulla privacy</a>
+            <a href="">Diritto di recesso</a>
+        </div>
+        
+            <div class="destra" >
+            <p>
+                Trovaci anche su:
+            </p>
+            </div>
+        </div>
     </footer>
 
 
