--- a/boolando-images/index.html
+++ b/boolando-images/index.html
@@ -10,10 +10,15 @@
 
 <body>
     <header>
+        <div class="prima">
+            <p class="href">Donna</p>
+            <p class="href">Uomo</p>
+            <p class="href">Bambino</p>
+        </div>
         <div>
-            <a href="">Donna</a>
-            <a href="">Uomo</a>
-            <a href="">Bambino</a>
+            <i class="fas fa-shopping-bag"></i>
+            <i class="fas fa-heart"></i>
+            <i class="fa-solid fa-user"></i>
         </div>
 
     </header>
@@ -21,14 +26,14 @@
         <section class="flex-centered">
             <div class="column column-small">
                 <div class="cambioimmagine">
-                <img class="immagine1" src="img/1.webp">
-                <img class="immagine2" src="img/1b.webp">
+                    <img class="immagine1" src="img/1.webp">
+                    <img class="immagine2" src="img/1b.webp">
                 </div>
                 <h4>
                     Levi's
                 </h4>
                 <p>
-                    RELAXED FIT TEE UNISEX
+                    <b>RELAXED FIT TEE UNISEX</b>
                 </p>
                 <p class="p1">
                     14,99€ <s class="black">29,99€</s>
@@ -36,14 +41,14 @@
             </div>
             <div class="column column-small">
                 <div class="cambioimmagine">
-                <img class="immagine1" src="img/2.webp">
-                <img class="immagine2" src="img/2b.webp">
+                    <img class="immagine1" src="img/2.webp">
+                    <img class="immagine2" src="img/2b.webp">
                 </div>
                 <h4>
                     Guess
                 </h4>
                 <p>
-                    ROSES TEE
+                    <b>ROSES TEE</b>
                 </p>
                 <p class="p1">
                     20,99€ <s class="black">29,99€</s>
@@ -51,14 +56,14 @@
             </div>
             <div class="column column-small">
                 <div class="cambioimmagine">
-                <img class="immagine1" src="img/3.webp">
-                <img class="immagine2" src="img/3b.webp">
+                    <img class="immagine1" src="img/3.webp">
+                    <img class="immagine2" src="img/3b.webp">
                 </div>
                 <h4>
                     Come Zucchero Filato
                 </h4>
                 <p>
-                    VOGLIA DI COLORI PASTELLO
+                    <b>VOGLIA DI COLORI PASTELLO</b>
                 </p>
                 <p class="p1">
                     129,99€ <s class="black">184,99€</s>
@@ -68,14 +73,14 @@
         <section class="flex-centered">
             <div class="column column-small">
                 <div class="cambioimmagine">
-                <img class="immagine1" src="img/4.webp">
-                <img class="immagine2" src="img/4b.webp">
+                    <img class="immagine1" src="img/4.webp">
+                    <img class="immagine2" src="img/4b.webp">
                 </div>
                 <h4>
                     Levi's
                 </h4>
                 <p>
-                    TEE UNISEX
+                    <b>TEE UNISEX</b>
                 </p>
                 <p class="p1">
                     14,99€ <s class="black">29,99€</s>
@@ -83,14 +88,14 @@
             </div>
             <div class="column column-small">
                 <div class="cambioimmagine">
-                <img class="immagine1" src="img/5.webp">
-                <img class="immagine2" src="img/5b.webp">
+                    <img class="immagine1" src="img/5.webp">
+                    <img class="immagine2" src="img/5b.webp">
                 </div>
                 <h4>
                     Maya Deluxe
                 </h4>
                 <p>
-                    STIRPE BODICE
+                    <b>STIRPE BODICE</b>
                 </p>
                 <p class="p1">
                     99,99€
@@ -98,14 +103,14 @@
             </div>
             <div class="column column-small">
                 <div class="cambioimmagine">
-                <img class="immagine1" src="img/6.webp">
-                <img class="immagine2" src="img/6b.webp">
+                    <img class="immagine1" src="img/6.webp">
+                    <img class="immagine2" src="img/6b.webp">
                 </div>
                 <h4>
                     Esprit
                 </h4>
                 <p>
-                    MAGLIONE BLACK
+                    <b>MAGLIONE BLACK</b>
                 </p>
                 <p class="p1">
                     24,99€
@@ -115,19 +120,27 @@
     </main>
     <footer>
         <div class="flex">
-        <div >
-            <h3>
-                Boolando.srl
-            </h3>
-            <a href="">informazioni legali</a>
-            <a href="">Informativa sulla privacy</a>
-            <a href="">Diritto di recesso</a>
-        </div>
-        
-            <div class="destra" >
-            <p>
-                Trovaci anche su:
-            </p>
+            <div>
+                <h3>
+                    Boolando.srl
+                </h3>
+                <a href="">informazioni legali</a>
+                <a href="">Informativa sulla privacy</a>
+                <a href="">Diritto di recesso</a>
+            </div>
+
+            <div >
+                <p>
+                    Trovaci anche su:
+                </p>
+                <div class="destra">
+                    <i class="fa-brands fa-facebook-f"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-pinterest"></i>
+                    <i class="fa-brands fa-youtube"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                </div>
+
             </div>
         </div>
     </footer>
