--- a/boolando-images/index.html
+++ b/boolando-images/index.html
@@ -5,24 +5,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>boolando</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/fontawesome.min.css"
+        integrity="sha512-UuQ/zJlbMVAw/UU8vVBhnI4op+/tFOpQZVT+FormmIEhRSCnJWyHiBbEVgM4Uztsht41f3FzVWgLuwzUqOObKw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <title>Booleando</title>
 </head>
 
 <body>
     <header>
-        <div class="prima">
-            <p class="href">Donna</p>
-            <p class="href">Uomo</p>
-            <p class="href">Bambino</p>
-        </div>
-        <div>
-            <ul>
-                <i class="fas fa-shopping-bag"></i>
-                <i class="fas fa-heart"></i>
-                <i class="fa-solid fa-user"></i>
-            </ul>
-        </div>
+        <div class="container">
+            <nav class="flex-between">
+                <ul class="flex">
+                    <li>
+                        Donna
+                    </li>
+                    <li>
+                        Uomo
+                    </li>
+                    <li>
+                        Bambino
+                    </li>
+                </ul>
+                <div class="main-logo">
+                    <img src="boolean-logo.png" alt="Boolean main logo">
+                </div>
 
+                <ul class="flex">
+                    <li>
+                        <i class="fas fa-shopping-bag"></i>
+                    </li>
+                    <li>
+                        <i class="fas fa-heart"></i>
+                    </li>
+                    <li>
+                        <i class="fa-solid fa-user"></i>
+                    </li>
+                </ul>
+            </nav>
+
+        </div>
     </header>
     <main>
         <section class="flex-centered">
@@ -119,35 +140,49 @@
                 </p>
             </div>
         </section>
+
+        </div>
     </main>
     <footer>
-        <div class="flex">
-            <div>
-                <h3>
-                    Boolando.srl
-                </h3>
-                <a href="">informazioni legali</a>
-                <a href="">Informativa sulla privacy</a>
-                <a href="">Diritto di recesso</a>
-            </div>
+        <div class="">
+            <nav class="">
+                <h2>
+                    Booleando.srl
+                </h2>
+                <ul class="">
+                    <li>
+                        informazioni legali
+                    </li>
+                    <li>
+                        Informativa sulla privacy
+                    </li>
+                    <li>
+                        Diritto di recesso
+                    </li>
+                </ul>
 
-            <div>
-                <p>
-                    Trovaci anche su:
-                </p>
-                <div class="destra">
-                    <i class="fa-brands fa-facebook-f"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-pinterest"></i>
-                    <i class="fa-brands fa-youtube"></i>
-                    <i class="fa-brands fa-twitter"></i>
-                </div>
 
-            </div>
+                <ul class="">
+                    <li>
+                        <i class="fa-brands fa-facebook-f"></i>
+                    </li>
+                    <li>
+                        <i class="fa-brands fa-instagram"></i>
+                    </li>
+                    <li>
+                        <i class="fa-brands fa-pinterest"></i>
+                    </li>
+                    <li>
+                        <i class="fa-brands fa-youtube"></i>
+                    </li>
+                    <li>
+                        <i class="fa-brands fa-twitter"></i>
+                    </li>
+                </ul>
+            </nav>
+
         </div>
     </footer>
-
-
 </body>
 
 </html>
