--- a/boolando-images/index.html
+++ b/boolando-images/index.html
@@ -144,43 +144,45 @@
         </div>
     </main>
     <footer>
-        <div class="">
-            <nav class="">
-                <h2>
-                    Booleando.srl
-                </h2>
-                <ul class="">
-                    <li>
-                        informazioni legali
-                    </li>
-                    <li>
-                        Informativa sulla privacy
-                    </li>
-                    <li>
-                        Diritto di recesso
-                    </li>
-                </ul>
+        <div class="container">
+            <div class="flex">
+                <nav class="flex-between">
+                    <h2>
+                        Booleando.srl
+                    </h2>
+                    <ul class="">
+                        <li>
+                            informazioni legali
+                        </li>
+                        <li>
+                            Informativa sulla privacy
+                        </li>
+                        <li>
+                            Diritto di recesso
+                        </li>
+                    </ul>
 
 
-                <ul class="">
-                    <li>
-                        <i class="fa-brands fa-facebook-f"></i>
-                    </li>
-                    <li>
-                        <i class="fa-brands fa-instagram"></i>
-                    </li>
-                    <li>
-                        <i class="fa-brands fa-pinterest"></i>
-                    </li>
-                    <li>
-                        <i class="fa-brands fa-youtube"></i>
-                    </li>
-                    <li>
-                        <i class="fa-brands fa-twitter"></i>
-                    </li>
-                </ul>
-            </nav>
+                    <ul class="flex">
+                        <li>
+                            <i class="fa-brands fa-facebook-f"></i>
+                        </li>
+                        <li>
+                            <i class="fa-brands fa-instagram"></i>
+                        </li>
+                        <li>
+                            <i class="fa-brands fa-pinterest"></i>
+                        </li>
+                        <li>
+                            <i class="fa-brands fa-youtube"></i>
+                        </li>
+                        <li>
+                            <i class="fa-brands fa-twitter"></i>
+                        </li>
+                    </ul>
+                </nav>
 
+            </div>
         </div>
     </footer>
 </body>
